--- a/src/pages/Autorization.module.css
+++ b/src/pages/Autorization.module.css
@@ -26,6 +26,7 @@
 .form, .form__field {
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .enter {
@@ -81,4 +82,36 @@ label {
 .error {
     color: red;
     font-size: 12px;
-  }
+    position: absolute;
+    padding-top: 72px;
+}
+
+.show__password .eye__on {
+    width: 24px;
+    height: 24px;
+    /* fill: #000; */
+}
+
+.show__password {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    position: absolute;
+    left: -15px;
+    top: 35px;
+}
+
+
+@media screen and (max-width: 768px) {
+    .wrapper {
+        width: 410px;
+        height: 480px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .wrapper {
+        width: 375px;
+        height: 430px;
+    } 
+}
