--- a/src/components/ModalForm.module.css
+++ b/src/components/ModalForm.module.css
@@ -1,129 +1,133 @@
 .container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    /* background-color: rgba(19, 144, 229, 0.8); */
-    background-color: #75C7FF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-sizing: border-box;
-    pointer-events: none;
-    opacity: 0;
-    transition: 0.6s ease-in-out;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  /* background-color: rgba(19, 144, 229, 0.8); */
+  background-color: #75c7ff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.6s ease-in-out;
 }
 
 .container.active {
-    opacity: 1;
-    pointer-events: all;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .modal__form {
-    width: 510px;
-    height: 573px;
-    background: #fff;
-    box-shadow: 0px 10px 50px rgba(19, 144, 229, 0.8);
-    border-radius: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 510px;
+  height: 573px;
+  background: #fff;
+  box-shadow: 0px 10px 50px rgba(19, 144, 229, 0.8);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .form__title {
-    font-weight: 500;
-    color: #000;
-    font-size: 18px;
-    margin-bottom: 36px;
+  font-weight: 500;
+  color: #000;
+  font-size: 18px;
+  margin-bottom: 36px;
 }
 
 .field {
-    width: 430px;
-    height: 70px;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 24px;
+  width: 430px;
+  height: 70px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
 }
 
-.field input, select {
-    width: 100%;
-    height: 48px;
-    border: 1px solid rgba(23, 23, 25, 0.1);
-    border-radius: 5px;
-    font-size: 20px;
-    padding-left: 15px;
+.field input,
+select {
+  width: 100%;
+  height: 48px;
+  border: 1px solid rgba(23, 23, 25, 0.1);
+  border-radius: 5px;
+  font-size: 20px;
+  padding-left: 15px;
 }
-.field input:focus, select:focus {
-    background: #FAFAFA;
-    outline: none;
-    border: 1px solid rgba(23, 23, 25, 0.1);
+.field input:focus,
+select:focus {
+  background: #fafafa;
+  outline: none;
+  border: 1px solid rgba(23, 23, 25, 0.1);
 }
 select {
-    padding-left: 15px;
+  padding-left: 15px;
 }
 .field label {
-    color: #000;
+  color: #000;
 }
 
-.field input::placeholder, select {
-    color: rgba(39, 39, 39, 0.3);
+.field input::placeholder,
+select {
+  color: rgba(39, 39, 39, 0.3);
 }
 .buttons {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-.buttons div, .buttons button {
-    width: 210px;
-    height: 52px;
-    text-align: center;
-    line-height: 52px;
-    vertical-align: middle;
-    border-radius: 5px;
-    cursor: pointer;
+.buttons div,
+.buttons button {
+  width: 210px;
+  height: 52px;
+  text-align: center;
+  line-height: 52px;
+  vertical-align: middle;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button {
-    border: none;
+  border: none;
 }
 
 .button__clear {
-    border: 1px solid #1390E5;
-    color: #1390E5;
+  border: 1px solid #1390e5;
+  color: #1390e5;
 }
 
 .button__blue {
-    background-color: #1390E5;
-    color: #fff;
+  background-color: #1390e5;
+  color: #fff;
 }
 
-.button__clear:hover, .button__blue:hover {
-    opacity: 0.9;
+.button__clear:hover,
+.button__blue:hover {
+  opacity: 0.9;
 }
 
 .range__container {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 32px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 32px;
 }
 
 .button__range {
-    width: 100px;
-    height: 48px;
-    text-align: center;
-    line-height: 52px;
-    vertical-align: middle;
-    border-radius: 5px;
-    border: 1px solid rgba(23, 23, 25, 0.1);
-    margin-left: 20px;
-    font-size: 20px;
-    font-weight: 400;
+  width: 100px;
+  height: 48px;
+  text-align: center;
+  line-height: 52px;
+  vertical-align: middle;
+  border-radius: 5px;
+  border: 1px solid rgba(23, 23, 25, 0.1);
+  margin-left: 20px;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 /* .animate {
     display: block;
 
 } */
-  
