--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,11 @@
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Rubik', sans-serif;
+
+  font-family: Rubik, sans-serif;
   font-size: 16px;
-  box-sizing: border-box;
 }
 
 body {
