--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -1,49 +1,58 @@
 .container {
+  pointer-events: none;
+
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100vh;
-  /* background-color: rgba(19, 144, 229, 0.8); */
-  background-color: #75c7ff;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
   box-sizing: border-box;
-  pointer-events: none;
+  width: 100%;
+  height: 100vh;
+
   opacity: 0;
+
+  /* background-color: rgba(19, 144, 229, 0.8); */
+  background-color: #75c7ff;
+
   transition: 0.6s ease-in-out;
 }
 
 .container.active {
-  opacity: 1;
   pointer-events: all;
+  opacity: 1;
 }
 
 .modal__form {
-  width: 510px;
-  height: 573px;
-  background: #fff;
-  box-shadow: 0px 10px 50px rgba(19, 144, 229, 0.8);
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+
+  width: 510px;
+  height: 573px;
+
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 10px 50px rgb(19 144 229 / 80%);
 }
 
 .form__title {
+  margin-bottom: 36px;
+  font-size: 18px;
   font-weight: 500;
   color: #000;
-  font-size: 18px;
-  margin-bottom: 36px;
 }
 
 .field {
-  width: 430px;
-  height: 70px;
   display: flex;
   flex-direction: column;
+
+  width: 430px;
+  height: 70px;
   margin-bottom: 24px;
 }
 
@@ -51,42 +60,52 @@
 select {
   width: 100%;
   height: 48px;
-  border: 1px solid rgba(23, 23, 25, 0.1);
-  border-radius: 5px;
-  font-size: 20px;
   padding-left: 15px;
+
+  font-size: 20px;
+
+  border: 1px solid rgb(23 23 25 / 10%);
+  border-radius: 5px;
 }
+
 .field input:focus,
 select:focus {
   background: #fafafa;
+  border: 1px solid rgb(23 23 25 / 10%);
   outline: none;
-  border: 1px solid rgba(23, 23, 25, 0.1);
 }
+
 select {
   padding-left: 15px;
 }
+
 .field label {
   color: #000;
 }
 
 .field input::placeholder,
 select {
-  color: rgba(39, 39, 39, 0.3);
+  color: rgb(39 39 39 / 30%);
 }
+
 .buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
+
 .buttons div,
 .buttons button {
+  cursor: pointer;
+
   width: 210px;
   height: 52px;
-  text-align: center;
+
   line-height: 52px;
+  text-align: center;
   vertical-align: middle;
+
   border-radius: 5px;
-  cursor: pointer;
 }
 
 button {
@@ -94,13 +113,13 @@ button {
 }
 
 .button__clear {
-  border: 1px solid #1390e5;
   color: #1390e5;
+  border: 1px solid #1390e5;
 }
 
 .button__blue {
-  background-color: #1390e5;
   color: #fff;
+  background-color: #1390e5;
 }
 
 .button__clear:hover,
@@ -117,14 +136,16 @@ button {
 .button__range {
   width: 100px;
   height: 48px;
-  text-align: center;
-  line-height: 52px;
-  vertical-align: middle;
-  border-radius: 5px;
-  border: 1px solid rgba(23, 23, 25, 0.1);
   margin-left: 20px;
+
   font-size: 20px;
   font-weight: 400;
+  line-height: 52px;
+  text-align: center;
+  vertical-align: middle;
+
+  border: 1px solid rgb(23 23 25 / 10%);
+  border-radius: 5px;
 }
 
 /* .animate {
