--- a/src/pages/auth/auth.module.scss
+++ b/src/pages/auth/auth.module.scss
@@ -1,20 +1,23 @@
 
 .container {
-    width: 100%;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    width: 100%;
+    height: 100vh;
 }
 
 .wrapper {
-    width: 510px;
-    height: 520px;
-    background-color: #fff;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+
+    width: 510px;
+    height: 520px;
+
+    background-color: #fff;
 }
 
 .wrapper img {
@@ -24,21 +27,21 @@
 }
 
 .form, .form__field {
+    position: relative;
     display: flex;
     flex-direction: column;
-    position: relative;
 }
 
 .enter {
+    margin-bottom: 20px;
+    font-size: 18px;
     font-weight: 500;
     color: #000;
-    font-size: 18px;
-    margin-bottom: 20px;
 }
 
 label {
-    color: #1717194D;
     margin-bottom: 5px;
+    color: #1717194D;
 }
 
 .form__field {
@@ -46,33 +49,37 @@ label {
 }
 
 .input {
-    height: 48px;
-    border-radius: 5px;
-    border: 1px solid rgba(23, 23, 25, 0.2);
     display: block;
+
     width: 334px;
+    height: 48px;
     padding: 6px 15px;
+
+    border: 1px solid rgb(23 23 25 / 20%);
+    border-radius: 5px;
 }
 
 .input:focus {
-   outline: none;
-   background-color: rgba(197, 228, 249, 0.3);
+   background-color: rgb(197 228 249 / 30%);
    border: 2px solid #1390E5;
+   outline: none;
 }
 
 
 .form__button {
     width: 176px;
     height: 52px;
-    border-radius: 5px;
-    background: #1390E5;
-    color: #fff;
-    font-weight: 400;
+    margin: 0 auto;
+
     font-size: 20px;
+    font-weight: 400;
+    line-height: 52px;
+    color: #fff;
     text-align: center;
     vertical-align: middle;
-    line-height: 52px;
-    margin: 0 auto;
+
+    background: #1390E5;
+    border-radius: 5px;
 }
 
 .form__button:hover {
@@ -80,10 +87,10 @@ label {
 }
 
 .error {
-    color: red;
-    font-size: 12px;
     position: absolute;
     padding-top: 72px;
+    font-size: 12px;
+    color: red;
 }
 
 .show__password .eye__on {
@@ -92,23 +99,25 @@ label {
 }
 
 .show__password {
-    display: flex;
-    width: 100%;
-    justify-content: flex-end;
     position: absolute;
-    left: -15px;
     top: 35px;
+    left: -15px;
+
+    display: flex;
+    justify-content: flex-end;
+
+    width: 100%;
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (width <= 768px) {
     .wrapper {
         width: 410px;
         height: 480px;
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (width <= 480px) {
     .wrapper {
         width: 375px;
         height: 430px;
