--- a/src/pages/favorites/favorites.module.scss
+++ b/src/pages/favorites/favorites.module.scss
@@ -3,38 +3,47 @@
     max-width: 1000px;
     margin: 0 auto;
 }
+
 .title {
-    padding-top: 40px;
     margin-bottom: 40px;
+    padding-top: 40px;
     font-size: 28px;
     font-weight: 400;
 }
 
 .fav__list {
+    cursor: pointer;
+
     max-width: 100%;
     height: 47px;
-    font-weight: 500;
-    background-color: #fff;
-    line-height: 47px;
-    padding-left: 20px;
-    cursor: pointer;
     margin-bottom: 3px;
+    padding-left: 20px;
+
+    font-weight: 500;
+    line-height: 47px;
+
+    background-color: #fff;
 }
 
 .button_hidden {
+    cursor: pointer;
+
     display: none;
+
     width: 100px;
     height: 50%;
-    cursor: pointer;
-    text-align: center;
     margin-left: 20px;
+
+    text-align: center;
+
     border-radius: 5px;
 }
+
 .fav__list:hover .button_hidden, .button_hidden:hover {
     display: inline-block;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (width <= 992px) {
     .fav__list {
         padding-left: 10px;
     }
